# ChrunSheild

./: .gitignore  PROJECT_STATUS.md  README.md  TEST_PLAN.md  pyproject.toml
apps/agents/: Dockerfile  pyproject.toml  railway.toml
apps/agents/src/churnq_agents/: __init__.py  config.py  db.py  main.py
apps/agents/src/churnq_agents/agents/: billing.py  churn_prediction.py  feedback_analyser.py  merchant_email.py  outreach.py  payment_recovery.py
apps/agents/src/churnq_agents/jobs/: queue.py
apps/agents/src/churnq_agents/routers/: agents.py
apps/agents/src/churnq_agents/webhooks/: stripe.py
apps/agents/src/churnq_agents/workers/: stripe_worker.py
apps/agents/src/churnshield_agents/: __init__.py  config.py  db.py  main.py
apps/agents/src/churnshield_agents/agents/: billing.py  churn_prediction.py  feedback_analyser.py  merchant_email.py  outreach.py  payment_recovery.py
apps/agents/src/churnshield_agents/jobs/: queue.py
apps/agents/src/churnshield_agents/routers/: agents.py
apps/agents/src/churnshield_agents/webhooks/: stripe.py
apps/agents/src/churnshield_agents/workers/: stripe_worker.py
apps/web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
docs/: docs.json  how-it-works.mdx  integration.md  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: cancel-intent.mdx  cancel-outcome.mdx  webhooks.mdx
docs/configuration/: embed.mdx  hmac-signing.mdx  offer-settings.mdx
docs/integrations/: discord.mdx  make.mdx  slack.mdx  stripe.mdx  (+2 more)
infra/: env.example
(+145 files in other folders)
